syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "PetServiceProtos";

package PetServiceProtos;


service PetClientService{

	rpc CreatePet (CreatePetRequest) returns (CreatePetResponse);
	rpc UpdatePet (UpdatePetRequest) returns (UpdatePetResponse);
	rpc DeletePet (DeletePetRequest) returns (DeletePetResponse);
	rpc GetPetById (GetPetByIdRequest) returns (PetResponse);
	rpc GetPets (GetPetsRequest) returns (GetPetsResponse);

}

message CreatePetRequest{
	string name = 1;
    int32 clientId = 2;
	google.protobuf.Timestamp birthday = 3;
}

message CreatePetResponse{
	int32 petId = 1;
}

message UpdatePetRequest {
    int32 petId = 1;
    int32 clientId = 2;
    string name = 3;
	google.protobuf.Timestamp birthday = 4;
}

message UpdatePetResponse {
}

message DeletePetRequest {
    int32 petId = 1;
}

message DeletePetResponse {
}

message GetPetByIdRequest {
    int32 petId = 1;
}

message GetPetByIdResponse {
    PetResponse Pet = 1;
}

message GetPetsRequest{
}

message GetPetsResponse{
    repeated PetResponse Pets = 1;
}

message PetResponse {
	int32 petId = 1;
    int32 clientId = 2;
    string name = 3;
	google.protobuf.Timestamp birthday = 4;
}