syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "ConsultationServiceProtos";

package ConsultationServiceProtos;


service ConsultationClientService{

	rpc CreateConsultation (CreateConsultationRequest) returns (CreateConsultationResponse);
	rpc UpdateConsultation (UpdateConsultationRequest) returns (UpdateConsultationResponse);
	rpc DeleteConsultation (DeleteConsultationRequest) returns (DeleteConsultationResponse);
	rpc GetConsultationById (GetConsultationByIdRequest) returns (ConsultationResponse);
	rpc GetConsultations (GetConsultationsRequest) returns (GetConsultationsResponse);

}

message CreateConsultationRequest{
	int32 clientId = 1;
	int32 petId = 2;
	google.protobuf.Timestamp consultationDate = 3;
    string description = 4;
}

message CreateConsultationResponse{
	int32 consultationId = 1;
}

message UpdateConsultationRequest {
    int32 consultationId = 1;
    int32 clientId = 2;
	int32 petId = 3;
	google.protobuf.Timestamp consultationDate = 4;
    string description = 5;
}

message UpdateConsultationResponse {
}

message DeleteConsultationRequest {
    int32 consultationId = 1;
}

message DeleteConsultationResponse {
}

message GetConsultationByIdRequest {
    int32 consultationId = 1;
}

message GetConsultationByIdResponse {
    ConsultationResponse Consultation = 1;
}

message GetConsultationsRequest{
}

message GetConsultationsResponse{
    repeated ConsultationResponse Consultations = 1;
}

message ConsultationResponse {
	int32 consultationId = 1;
    int32 clientId = 2;
	int32 petId = 3;
	google.protobuf.Timestamp consultationDate = 4;
    string description = 5;
}